# wright

./: .all-contributorsrc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .hermes.md  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  ci_failures.md  docker-compose.hackathon.yml  docker-compose.legacy.yml  docker-compose.minimal.yml  docker-compose.test.yml  docker-compose.yml  fc_bridge.py  index.html  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependency-audit-policy.json  labels.yml  release-drafter.yml
.specify/: feature.json  init-options.json
Comprehensive Specification for Robust Feature-Based CAD Methodology_ Best Practices in Onshape and Spec-Driven Design/: index.html
Engineering MCP Tools Discovery/: index.html
agent-docker-architecture/: index.html
alpha-release-notes-template/: index.html
alpha-release-readiness/: index.html
apps/api/: README.md  pyproject.toml
apps/api/src/api/: __init__.py  composition.py  config.py  gateway_stdio.py  logging_config.py  main.py  mcp_transport.py  notifications.py  security.py
apps/api/src/api/database/: migrate.py  secret_migration.py
apps/api/src/api/middleware/: __init__.py  tracing.py
apps/api/src/api/routers/: agent.py  billing.py  gateway.py  logs.py  mcp.py  settings.py  setup.py  vault.py  workspace.py
apps/api/src/api/schemas/: __init__.py  common.py  logs.py  settings.py  workspace.py
apps/api/src/api/services/: __init__.py  hermes_sync.py  mcp_services.py  wright_gateway_sync.py
apps/api/tests/: conftest.py  test_agent_commands.py  test_agent_health.py  test_agent_runtime_boot.py  test_billing_api.py  test_config.py  test_database_startup.py  test_gateway_api.py  test_hermes_adapter.py  test_hermes_sync.py  test_logging_config.py  test_mcp_api.py  test_mcp_catalog_seed.py  test_mcp_credentials.py  test_mcp_transport.py  test_secret_migration.py  test_security.py  test_settings_security.py  test_setup_api.py  test_trace_correlation.py  test_webmcp.py  test_workspace_api.py  test_workspace_composition.py
architecture/: python-packages.toml
awesome-list-submissions/: index.html
community-readiness-roadmap/: index.html
demo-script/: index.html
deployment-configurations/: index.html
docker/: .env.example  DOCKER_HUB_README.md  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.hackathon  SOUL.md  container-manifest.md  dependency-inventory.md  entrypoint.hackathon.sh  entrypoint.sh  release-policy.json  supervisord.conf  supervisord.hackathon.conf
docs/: Comprehensive Specification for Robust Feature-Based CAD Methodology_ Best Practices in Onshape and Spec-Driven Design.md  Engineering MCP Tools Discovery.md  agent-docker-architecture.md  alpha-release-notes-template.md  alpha-release-readiness.md  awesome-list-submissions.md  community-readiness-roadmap.md  demo-script.md  deployment-configurations.md  dual-mode-desktop-integration.md  good-first-issues.md  gpt5-6-implementation-status.md  gpt5-6plan.md  hermes-desktop-wright.md  index.md  metadata-guide.md  nous-hackathon-prototype.md  public-launch-checklist.md  technical_analysis.md  versioning.md  viewer-spec.md  wright-hermes-plugin-plan.md
dual-mode-desktop-integration/: index.html
examples/: onshape_cube.py
good-first-issues/: index.html
hermes-desktop-wright/: index.html
hermes-plugin-wright/: PROVENANCE.md  README.md  __init__.py  bridge.py  catalog.py  catalog.yaml  commands.py  plugin.yaml  pyproject.toml  schemas.py  verify_plugin.py
hermes-plugin-wright/tests/: conftest.py  test_bridge.py  test_catalog.py  test_commands.py  test_plugin_metadata.py
hermes-wright-panel/: README.md  package.json  panel.cjs  preload.cjs  types.d.ts
metadata-guide/: index.html
outputs/: wright-end-slides.pptx  wright-end-slides.pptx.inspect.ndjson  ~$wright-end-slides.pptx
public-launch-checklist/: index.html
scripts/: README.md  __init__.py  alpha-release-check.ps1  alpha-release-check.sh  assemble-release-evidence.py  backup-volumes.sh  benchmark-database-recovery.py  build-python-distributions.sh  check-dev-merge.sh  check-prod-merge.sh  check-public-alpha-leaks.py  cleanup-workspaces.py  docker-smoke-test.sh  fetch_ci_failures.py  freecad_mcp.patch  generate-frontend-contracts.py  hackathon-update-wright.ps1  hackathon-update-wright.sh  hermes-plugin-lifecycle-common.sh  openscad-headless.sh  patch-submodule.sh  production-update.sh  release-preflight.py  release-rehearsal.py  restore-secret-backup.py  restore-volume.sh  run_codex_mcp_compatibility.py  security-scan.ps1  security-scan.sh  setup-wright-profile.sh  sync-hermes-plugin-mirror.sh  test-hermes-plugin-install.sh  test-hermes-plugin-uninstall.sh  test-hermes-plugin-update.sh  validate-hermes-plugin-mirror.sh  verify-release-evidence.py
search/: search_index.json
technical_analysis/: index.html
tests/: test_alpha_release_readiness.py  test_alpha_release_wrapup.py  test_architecture_alpha_docs.py  test_blog_intro_alpha_docs.py  test_ci_cd_workflow_docs.py  test_community_feature_docs.py  test_container_security_contract.py  test_deployment_configuration_docs.py  test_docker_smoke_contract.py  test_docs_home_overview_alpha_contract.py  test_docs_release_gate.py  test_frontend_contracts.py  test_getting_started_paths.py  test_github_labels.py  test_hermes_plugin_lifecycle_contract.py  test_hermes_plugin_mirror_docs.py  test_hermes_plugin_mirror_provenance.py  test_hermes_plugin_mirror_readme.py  test_hermes_plugin_mirror_sync.py  test_hermes_plugin_mirror_validation.py  test_import_boundaries.py  test_legacy_plan_alpha_language.py  test_public_alpha_leak_scan.py  (+9 more)
tests/fixtures/hermes_plugin_mirror/: PROVENANCE.md  README.md  __init__.py  bridge.py  catalog.py  commands.py  plugin.yaml  provenance.json  pyproject.toml  schemas.py  verify_plugin.py
(+787 files in other folders)
