[project]
name = "wright"
version = "0.1.0"
description = "A digital engineer, designer, and mechanical analyst — local-first multi-agent mechanical engineering appliance"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.uv.workspace]
members = [
    "apps/api",
    "hermes-plugin-wright",
    "packages/core",
    "packages/agent_adapters",
    "packages/tool_registry",
    "packages/data_vault",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
    "ruff>=0.15.20",
]
