[project]
name = "wright-engineering"
version = "0.1.0"
description = "Public-alpha helper CLI for the Wright local-first engineering appliance"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "Wright Project", email = "wright@makerengineer.com" }]
keywords = ["wright", "engineering", "local-first", "agent", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/burhop/wright"
Source = "https://github.com/burhop/wright"
Issues = "https://github.com/burhop/wright/issues"
Documentation = "https://burhop.github.io/wright/"
Releases = "https://github.com/burhop/wright/releases"

[project.scripts]
wright = "wright_engineering.cli:main"

[tool.uv.sources]
wright-workspace-service = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/api",
    "hermes-plugin-wright",
    "packages/core",
    "packages/agent_adapters",
    "packages/tool_registry",
    "packages/data_vault",
    "packages/workspace_service",
]

[tool.pytest.ini_options]
testpaths = [
    "apps/api/tests",
    "packages/agent_adapters/tests",
    "packages/core/tests",
    "packages/data_vault/tests",
    "packages/tool_registry/tests",
    "packages/workspace_service/tests",
    "tests",
]
markers = [
    "gateway: provider-neutral GatewayService contract and isolation tests",
    "mcp_protocol: official MCP SDK transport and protocol compatibility tests",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wright_engineering"]
