[project]
name = "hermes-plugin-wright"
version = "1.0.0"
description = "Wright engineering MCP catalog for Hermes Agent"
authors = [{name = "Wright Project", email = "wright@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "structlog>=24.0",
]

[project.entry-points."hermes_agent.plugins"]
wright = "hermes_plugin_wright"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "__init__.py" = "hermes_plugin_wright/__init__.py", "plugin.yaml" = "hermes_plugin_wright/plugin.yaml", "catalog.py" = "hermes_plugin_wright/catalog.py", "schemas.py" = "hermes_plugin_wright/schemas.py", "catalog.yaml" = "hermes_plugin_wright/catalog.yaml", "bridge.py" = "hermes_plugin_wright/bridge.py", "commands.py" = "hermes_plugin_wright/commands.py" }


