[project]
name = "wright-api"
version = "0.1.0"
description = "FastAPI application — zero business logic, routing only"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "structlog>=24.1",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "wright-core",
    "wright-agent-adapters",
    "wright-tool-registry",
    "wright-data-vault",
    "httpx>=0.28",
    "httpx-sse>=0.4",
    "python-multipart>=0.0.32",
]

[tool.uv.sources]
wright-core = { workspace = true }
wright-agent-adapters = { workspace = true }
wright-tool-registry = { workspace = true }
wright-data-vault = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
