[project]
name = "hermes-plugin-wright"
version = "1.0.0"
description = "Wright engineering MCP catalog for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "wright-tool-registry>=0.1.0,<0.2.0",
]

[project.urls]
Homepage = "https://github.com/burhop/wright"
Source = "https://github.com/burhop/wright"
Issues = "https://github.com/burhop/wright/issues"
Documentation = "https://burhop.github.io/wright/"
Releases = "https://github.com/burhop/wright/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
